<resources>
    <string name="app_name">TicketToRide</string>

    <string name="ticketToRide">Ticket To Ride</string>

    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="register">Register</string>

    <string name="create_game">Create Game</string>
    <string name="cancel">Cancel</string>
    <string name="gameList_explanation">Tap an existing game to join, or create a new game.</string>

    <string name="empty_username_error">You must enter a username.</string>
    <string name="empty_password_error">You must enter a password.</string>

    <string name="enter_gameName_prompt">Enter a name for the game:</string>
    <string name="select_playerCount_prompt">Select the desired number of players:</string>

    <string name="waiting_message">Waiting for remaining players...</string>
    <string name="ready_message">Let\'s go!</string>

    <string name="points">Pts: </string>
    <string name="train_cards">TC: </string>
    <string name="dest_tickets">DT: </string>
    <string name="train_cars">Cars: </string>

    <string name="chat_game_history">Chat/Game History</string>
    <string name="chat">Chat</string>
    <string name="game_history">Game History</string>
    <string name="name_message_separator"> : </string>
    <string name="ok">Ok</string>
    <string name="send">Send</string>
    <string name="message_hint">Enter message here</string>

    <string name="game_over">Game Over!</string>
    <string name="finish_game">Finish Game</string>
    <string name="rank">Rank</string>
    <string name="player_name">Player</string>
    <string name="routes_claimed_pts">RC</string>
    <string name="destinations_pos_pts">DT+</string>
    <string name="destinations_neg_pts">DT-</string>
    <string name="longest_path_pts">LP</string>
    <string name="total_points">Total</string>
    <string name="rank1">1</string>
    <string name="rank2">2</string>
    <string name="rank3">3</string>
    <string name="rank4">4</string>
    <string name="rank5">5</string>

    <string name="claim_route">Claim Route</string>
    <string name="claim">Claim</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="default_count">0</string>

    <string name="show_map">Hold To Show Map</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
