<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.group4.tickettoride.Login_Register.Login_RegisterActivity"
    android:background="@drawable/paperbackground"
    >

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="250dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/colorBlack"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username_editText"
            android:inputType="textNoSuggestions"
            android:maxLength="20"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/colorBlack"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_editText"
            android:textColor="@color/colorBlack"
            android:inputType="textPassword"
            android:maxLength="20"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"/>

        <Button
            android:id="@+id/register_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/register"
            />
    </LinearLayout>

</LinearLayout>
